--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
 $font-family-main: Arial, 'Source Sans Pro', Helvetica, Arial, sans-serif;
-$font-family-headings: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+$font-family-headings: Arial, 'Source Sans Pro', Helvetica, Arial, sans-serif;
 $font-family-logo: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 $font-size: 1.25em;
 
@@ -44,7 +44,7 @@ $navbar-separator-opacity: 0;
 
 // Feature image for articles
 $feature-image-text-color: #fff;
-$feature-image-size: cover; // options include "cover", "contain", "auto"
+$feature-image-size: contain; // options include "cover", "contain", "auto"
 
 //Search colours
 $link-shadow: transparentize($link-color, .6); //rgba(26, 188, 156, 0.6);
