--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,6 +1,6 @@
 // Typography
-$font-family-main: Arial, 'Source Sans Pro', Helvetica, Arial, sans-serif;
-$font-family-headings: Arial, 'Source Sans Pro', Helvetica, Arial, sans-serif;
+$font-family-main: Helvetica, 'Source Sans Pro', Helvetica, Arial, sans-serif;
+$font-family-headings: Helvetica, 'Source Sans Pro', Helvetica, Arial, sans-serif;
 $font-family-logo: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 $font-size: 1.25em;
 
