--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -1,7 +1,8 @@
 // Typography
-$font-family-main: Helvetica, 'Source Sans Pro', Helvetica, Arial, sans-serif;
-$font-family-headings: Helvetica, 'Source Sans Pro', Helvetica, Arial, sans-serif;
-$font-family-logo: 'Source Sans Pro', Helvetica, Arial, sans-serif;
+$font-family-main: Arial, 'Source Sans Pro', Helvetica, sans-serif;
+$font-family-headings: 'Source Sans Pro', Arial, sans-serif;
+$font-family-logo: 'Source Sans Pro', 
+Arial, sans-serif;
 $font-size: 1.25em;
 
 // Padding
