--- a/_sass/includes/_cookie_consent.scss
+++ b/_sass/includes/_cookie_consent.scss
@@ -5,8 +5,8 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background: rgba(2, 2, 2, 0.85);
-  color: lightgray;
+  background: rgba(0, 0, 0, 0.85);
+  color: #ffffff;
   z-index: 1000;
 }
 
