--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
     <div class="bootstrap-iso">
     {% endif %}
     
-      {% include post_warning.html date=page.date cateogories=page.categories % }
+      {% include post_warning.html date=page.date categories=page.categories %}
       {{ content }}
     {% if page.bootstrap %}
     </div>
