--- a/_includes/post_warning.html
+++ b/_includes/post_warning.html
@@ -4,6 +4,8 @@
 
 {{ site.time | date: '%Y' | minus: year }}
 
+{{ categories }}
+
 <blockquote class="warn">
 <p>Warning. This technical article was first published over 2 years ago and may discuss features and approaches that are no longer relevant for the current version of the platform.</p>
 </blockquote>
