Logic to hide warning

--- a/_includes/post_warning.html
+++ b/_includes/post_warning.html
@@ -1,11 +1,11 @@
 {% assign categories = include.categories %}
 {% assign year = include.date | date: '%Y' %}
-
-
-{{ site.time | date: '%Y' | minus: year }}
+{% assign yeardiff = site.time | date: '%Y' | minus: year %}
 
 {{ categories }}
 
+{% if yeardiff > 2 %}
 <blockquote class="warn">
 <p>Warning. This technical article was first published over 2 years ago and may discuss features and approaches that are no longer relevant for the current version of the platform.</p>
 </blockquote>
+{% endif %}
