--- a/_includes/post_warning.html
+++ b/_includes/post_warning.html
@@ -3,7 +3,7 @@
 {% assign yeardiff = site.time | date: '%Y' | minus: year %}
 
 {% if yeardiff > 2 and categories contains "Episerver" %}
-<blockquote class="warn">
-<p>Warning. This technical article was first published over 2 years ago and may discuss features and approaches that are no longer relevant for the current version of the platform.</p>
+<blockquote class="warning"><p>
+Warning. This technical article was first published over 2 years ago and may discuss features and approaches that are no longer relevant for the current version of the platform.</p>
 </blockquote>
 {% endif %}
