--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -36,12 +36,14 @@ $meta: #595959; //lowest gray for accessible color
 $link-color: $theme-color;
 $selection-color: #D4D4D4; // visible when highlighting text
 $blockquote-color: #EEF7FA; // $background-color;
+$warning-color: #F0AD4E;
 
 // Header
 $header-background-color: darken($theme-color, 50%); // Only used when no header image
 $header-text-color: #fff;
 $header-link-color: #383838;
 $navbar-separator-opacity: 0;
+  
 
 // Feature image for articles
 $feature-image-text-color: #fff;
