--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -25,7 +25,7 @@ $sm-break: 576px;
 $x-sm-break: 300px;
 
 // Brand colours
-$theme-color: #990000;
+$theme-color: #cc0000;
 $brand-color: #fff;
 $background-color: #fff;
 $border-color: rgba(0, 0, 0, 0.1); // rgba recommended if using feature images
