--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -36,7 +36,7 @@ $meta: #595959; //lowest gray for accessible color
 $link-color: $theme-color;
 $selection-color: #D4D4D4; // visible when highlighting text
 $blockquote-color: #EEF7FA; // $background-color;
-$warning-color: #F0AD4E;
+$warning-color: #FEF3CC;
 
 // Header
 $header-background-color: darken($theme-color, 50%); // Only used when no header image
