--- a/_includes/blog.html
+++ b/_includes/blog.html
@@ -18,13 +18,13 @@
             {% include post_info.html author=post.author date=post.date %}
           </header>
           {% if site.excerpt or site.theme_settings.excerpt %}
-              <div class="excerpt">
+              <div class="excerpt"><p>
                   {% if site.excerpt == "truncate" %}
                      {{ post.content | strip_html | truncate: '250' | escape }}
                   {% else %}
                      {{ post.excerpt | strip_html | escape }}
                   {% endif %}
-              </div>
+              </p></div>
           {% endif %}
       </span>
     </div>
