--- a/_includes/post_warning.html
+++ b/_includes/post_warning.html
@@ -1,7 +1,7 @@
 {% assign year = include.date | date: '%Y' %}
 {% assign yeardiff = site.time | date: '%Y' | minus: year %}
 
-{% if yeardiff > 2 and include.hide-warning = false and include.categories contains "Episerver" %}
+{% if yeardiff > 2 and include.categories contains "Episerver" %}
 <blockquote class="warning"><p>
 Warning. This technical article was first published over 2 years ago and may discuss features and approaches that are no longer relevant for the current version of the platform.</p>
 </blockquote>
