--- a/_includes/post_warning.html
+++ b/_includes/post_warning.html
@@ -1,8 +1,8 @@
 {% assign year = include.date | date: '%Y' %}
 {% assign yeardiff = site.time | date: '%Y' | minus: year %}
 
-{% assign show = include.hide-warning == false | default: false %}
-{{ hide }}
+{% assign show = include.hide-warning == false | default: true %}
+{{ show }}
 
 {% if yeardiff > 2 and show and include.categories contains "Episerver" %}
 <blockquote class="warning"><p>
