--- a/_includes/post_warning.html
+++ b/_includes/post_warning.html
@@ -5,6 +5,6 @@
 
 {% if yeardiff > 2 and hide == false and include.categories contains "Episerver" %}
 <blockquote class="warning"><p>
-Warning. This technical article was first published over 2 years ago and may discuss features and approaches that are no longer relevant for the current version of the platform.</p>
+This technical article was first published over 2 years ago and may discuss features and approaches that are no longer relevant for the current version of the platform.</p>
 </blockquote>
 {% endif %}
