Updated Episerver to Optimizely Added Optimizely Experimentation Fix for Christmas tale

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     {% endif %}
 
+    <!-- Experimentation -->
+    <script src="https://cdn.optimizely.com/js/21516624425.js"></script>
+
     <!-- KaTeX 0.12.0 -->
     <!-- if you have any issue check https://github.com/KaTeX/KaTeX -->
     {% if site.katex or site.theme_settings.katex %}
