--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1510,6 +1510,7 @@ a.newer-posts:hover {
   }
   .post .post-content .post-title {
     margin: 0 0 5px;
+    line-height: 0.9em;
   }
   .post .post-content .post-title a {
     font-size: 21px;
