--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -31,6 +31,9 @@ layout: default
         {% if site.social-email %}
           <li class="email"><a href="mailto:{{site.social-email}}"><i class="fa fa-envelope-o"></i></a></li>
         {% endif %}
+        {% if site.social-website %}
+          <li class="web"><a href="{{site.social-website}}"><i class="fa fa-code"></i></a></li>
+        {% endif %}
       </ul>
     </section> <!-- End Section Contact -->
     <div class="copyright">
